# learning-langchain

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile.mlflow  docker-compose.yml  justfile  pyproject.toml
.claude/: settings.local.json
.jupyter/: jupyter_lab_config.py
docs/superpowers/plans/: 2026-03-28-jupyter-scaffold-skill.md  2026-03-28-phoenix-tracing.md
docs/superpowers/specs/: 2026-03-28-jupyter-scaffold-skill-design.md  2026-03-28-phoenix-tracing-design.md
notebooks/2026_03_28_initial_examples/: 01-hello-world.py  02-tracing-basics.py  03-trace-react-agent.py  04-eval-loop.py  05-eval-judge.py  06-invoice-eval.py  07-react-agent-internals.py  utils.py
notebooks/2026_03_28_react_agent/: 01-hello-world.py
notebooks/2026_04_02_testing_marimo/: 01_hello_world.py  02_chat_app.py  03_langchain_testing.py
