[project]
name = "learning-langchain"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
]

[dependency-groups]
research = [
    "jupyterlab>=4.5.6",
    "jupytext>=1.19.1",
    "mlflow>=3.10.1",
]

[tool.jupytext]
formats = "ipynb,py:percent"
